...
                                    <constraint firstAttribute="trailing" secondItem="dnC-wk-u1K" secondAttribute="trailing" constant="8" id="wc1-U2-BWc"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qC0-uu-hb9">
                                <rect key="frame" x="0.0" y="602.5" width="375" height="64.5"/>
                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="0.93666487070000004" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Play Button" identifier="PlayButton" label="Play Button"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Play">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="playGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pah-mr-sd1"/>
...
                                                <fontDescription key="fontDescription" name="BradleyHandITCTT-Bold" family="Bradley Hand" pointSize="36"/>
                                                <color key="textColor" red="0.60820132490000001" green="0.16673234109999999" blue="0.1069081947" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="abcdefghijklmnopqrstuvwxyz" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vsZ-9y-Q7u">
                                                <rect key="frame" x="0.0" y="72" width="359" height="72"/>
                                                <accessibility key="accessibilityConfiguration" hint="Text Field to Guess Letter" identifier="GuessTextField" label="Enter a Letter"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already Guessed:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G
                                                <rect key="frame" x="0.0" y="144" width="359" height="71.5"/>
...
                                </subviews>
                                <variation key="heightClass=compact-widthClass=compact" axis="horizontal"/>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="451-Rt-E0g">
                                <rect key="frame" x="0.0" y="602.5" width="375" height="64.5"/>
                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="0.93666487070000004" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" hint="Enter Your Letter" identifier="ChooseLetterButton" label="Enter Your Letter"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <state key="normal" title="Choose">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="chooseLetter:" destination="q52-hX-eZC" eventType="touchUpInside" id="niQ-5V-vY1"/>
...
